--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -9,5 +9,18 @@
   .field
     = f.label :name
     = f.text_field :name
+    blockquote Username must be lowercase and URL-safe characters.
+
+  .field
+    = f.label :email
+    = f.text_field :email
+
+  .field
+    = f.label :password
+    = f.password_field :password
+
+  .field
+    = f.label :password_confirmation
+    = f.password_field :password_confirmation
 
   .actions = f.submit
