Add packages and test

--- a/app/views/packages/index.html.slim
+++ b/app/views/packages/index.html.slim
@@ -1,7 +1,11 @@
-h1 Discover awesome Sketch plugins
+h1 Discover awesome Sketch plugins(h1)
 
 / TODO: Show search form
 
-h2 Featured
+h2 Featured(h2)
+
+p
+  | there are featured plugins.(p)<br>
+  | Register your plugins as well!
 
 / TODO: List featured plugins
