--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,26 +5,28 @@ html
     = stylesheet_link_tag 'application', media: 'all'
     = javascript_include_tag 'application'
     = csrf_meta_tags
+
   body
-    header
-      div
+    .notification
+      - if flash[:notice]
         p.notice = flash[:notice]
+      - if flash[:alert]
         p.alert  = flash[:alert]
-      div style="text-align: right;"
-        ul
-          - if logged_in?
-            p Currently logged in as: #{current_user.email}
 
-            - if current_user.has_linked_github?
-              li = link_to 'Unlink your Github account', delete_oauth_path('github'), method: :delete
-            - else
-              li = link_to 'Link your GitHub account', auth_at_provider_path(provider: :github)
+    header
+      h1.chest-logo Chest
+      nav.nav-global
+        .nav-link = link_to 'Browse', packages_path
+        .nav-link = link_to 'Document', 'https://github.com/uetchy/chest.pm'
+        .nav-link = link_to 'GitHub', 'https://github.com/uetchy/chest.pm', target: '_blank'
 
-            li = link_to 'Logout', logout_path
-          - else
-            li = link_to 'Create Account', new_user_path
-            li = link_to 'Login', login_path
-            li = link_to 'Login using Github', auth_at_provider_path(provider: :github)
+      nav.nav-user
+        - if logged_in?
+          .nav-link = current_user.email
+          .nav-link = link_to 'Logout', logout_path
+        - else
+          .nav-link = link_to 'Create Account', new_user_path
+          .nav-link = link_to 'Login', login_path
 
     main
       = yield
