--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,6 +7,7 @@ html
     = csrf_meta_tags
 
   body
+    = evil_icons_sprite
     .notification
       - if flash[:notice]
         p.notice = flash[:notice]
