--- a/app/views/packages/show.html.slim
+++ b/app/views/packages/show.html.slim
@@ -1,4 +1,4 @@
-.package-meta.fluid-layout
+.package-meta
   .package-basics
     h1.package-name = @package.name
     h2.package-description = @package.description
