--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -33,6 +33,7 @@ html
           = link_to 'Logout', destroy_user_session_path, method: :delete
         - else
           = link_to 'Create Account', new_user_registration_path
+          = link_to 'Sign up with Github', user_omniauth_authorize_path(:github)
           = link_to 'Login', new_user_session_path
 
     main
