--- a/app/assets/stylesheets/packages.css.sass
+++ b/app/assets/stylesheets/packages.css.sass
@@ -1,6 +1,11 @@
+.package-intro
+  padding: 100px 0
+  text-align: center
+  background-color: #F7F3F3
+
 .package-meta
   padding: 50px 0
-
+  background-color: #F7F3F3
   display: flex
   flex-flow: row
   justify-content: flex-start
@@ -11,17 +16,6 @@
   .package-basics
     .package-description
       color: #837B7B
-
-    .package-instruction
-      display: inline-block
-      margin-top: 20px
-      padding: 14px 27px
-      cursor: pointer
-      font-size: 20px
-      font-weight: 300
-      color: #FD5745
-      border: 1px solid #FD5745
-      border-radius: 3px
 
   .package-details
     ul
@@ -44,3 +38,11 @@
 
   img
     // width: 100%
+
+.package-list
+  display: box
+  flex-flow: row wrap
+  justify-content: flex-start
+
+  .package-list-item
+    border: 1px solid #000
