--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,26 +1,27 @@
-h1 Sign up
+.fluid-content.section
+  h1 Sign up
 
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :name
-    = f.text_field :name, autofocus: true
+  = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+    = devise_error_messages!
+    .field
+      = f.label :name
+      = f.text_field :name, autofocus: true
 
-  .field
-    = f.label :email
-    = f.email_field :email
-  .field
-    = f.label :password
-    - if @validatable
-      em
-        | (
-        = @minimum_password_length
-        |  characters minimum)
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .actions
-    = f.submit "Sign up"
+    .field
+      = f.label :email
+      = f.email_field :email
+    .field
+      = f.label :password
+      - if @validatable
+        em
+          | (
+          = @minimum_password_length
+          |  characters minimum)
+      = f.password_field :password, autocomplete: "off"
+    .field
+      = f.label :password_confirmation
+      = f.password_field :password_confirmation, autocomplete: "off"
+    .actions
+      = f.submit "Sign up"
 
-= render "devise/shared/links"
+  = render "devise/shared/links"
