--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,6 +1,24 @@
-h1 = @user.name
+.fluid-content.section
+  h1 = @user.name
 
-/ List users' published plugins
-- @user.packages.each do |package|
-  h2 = package.name
-  p = package.description
+  - if current_user == @user
+    .well.field Your auth token is <b>#{current_user.token}</b>
+
+  .package-list.section
+    - if @user.packages.present?
+      - @user.packages.each do |package|
+        .package-list-item
+          h2 = link_to package.name, package
+          p = package.description
+          ul.list.list-horizontal
+            li.list-item
+              i.list-icon.fi-torso
+              = link_to package.user.name, package.user
+            li.list-item
+              i.list-icon.fi-clock
+              = package.versions.last.version
+            li.list-item
+              i.list-icon.fi-archive
+              = package.download_count
+    - else
+      h2 No packages here
