--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -13,8 +13,7 @@
         = resource.unconfirmed_email
     .field
       = f.label :password
-      i
-        | (leave blank if you don't want to change it)
+      i (leave blank if you don't want to change it)
       br
       = f.password_field :password, autocomplete: "off"
     .field
@@ -24,8 +23,7 @@
     - unless current_user.omniauth_connected?
       .field
         = f.label :current_password
-        i
-          | (we need your current password to confirm your changes)
+        i (we need your current password to confirm your changes)
         br
         = f.password_field :current_password, autocomplete: "off"
     .actions
