--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -14,7 +14,7 @@
 body
   font-family: "Lato", sans-serif
   color: $font_color
-  font-size: 12pt
+  font-size: 10pt
 
 a
   color: $font_color
@@ -71,12 +71,13 @@ header
     align-items: center
 
     text-transform: uppercase
+    font-size: 9pt
+    font-weight: 700
+    letter-spacing: 1px
 
     a
       color: #000
       text-decoration: none
-      font-weight: 500
-      font-size: 14px
 
       margin-left: 30px
 
