--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title Chest
+    = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Lato'
     = stylesheet_link_tag 'application', media: 'all'
     = javascript_include_tag 'application'
     = csrf_meta_tags
