--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -2,7 +2,9 @@
   h1 = @user.name
 
   - if current_user == @user
-    .well.field Your auth token is <b>#{current_user.token}</b>
+    .well.field
+      | Your auth token is <b>#{current_user.token}</b>
+      = link_to 'Regenerate', '', method: post
     ul.list
       li = link_to 'Edit', edit_user_registration_path
       li = link_to 'Cancel Account', user_registration_path, method: :delete
